--- a/Pipelines/Tutorial__InvertPixelValuesInNewSeries.html
+++ b/Pipelines/Tutorial__InvertPixelValuesInNewSeries.html
@@ -33,7 +33,7 @@ Inverts a number of selected images and saves them in a new series, image by ima
 
 def main(weasel):
     list_of_images = weasel.images()    # get the list of images checked by the user
-    if len(list_of_images) == 0: return   # if the user cancels then exit
+    if len(list_of_images) == 0: return   # if no images are selected, then exit
     series = list_of_images.new_parent(suffix=&#34;_Invert&#34;)
     for i, image in enumerate(list_of_images): # Loop over images and display a progress Bar
         weasel.progress_bar(max=len(list_of_images), index=i+1, msg=&#34;Inverting image {}&#34;)
@@ -61,7 +61,7 @@ def main(weasel):
 </summary>
 <pre><code class="python">def main(weasel):
     list_of_images = weasel.images()    # get the list of images checked by the user
-    if len(list_of_images) == 0: return   # if the user cancels then exit
+    if len(list_of_images) == 0: return   # if no images are selected, then exit
     series = list_of_images.new_parent(suffix=&#34;_Invert&#34;)
     for i, image in enumerate(list_of_images): # Loop over images and display a progress Bar
         weasel.progress_bar(max=len(list_of_images), index=i+1, msg=&#34;Inverting image {}&#34;)
