--- a/Pipelines/Tutorial__ThresholdPixelValuesInNewSeries.html
+++ b/Pipelines/Tutorial__ThresholdPixelValuesInNewSeries.html
@@ -35,7 +35,7 @@ import numpy as np
 
 def main(weasel):
     list_of_images = weasel.images()    # get the list of images checked by the user
-    if len(list_of_images) == 0: return   # if the user cancels then exit
+    if len(list_of_images) == 0: return   # if no images are selected, then exit
     
     cancel = 0
     while cancel == 0:
@@ -60,7 +60,6 @@ def main(weasel):
 
 
 def Thresholded(pixelArray, lower_threshold, upper_threshold):
-    # It doesn&#39;t work correctly with negative values, so something isn&#39;t correct
     maximum_value = np.amax(pixelArray)
     minimum_value = np.amin(pixelArray)
     upper_value = minimum_value + (upper_threshold / 100) * (maximum_value - minimum_value)
@@ -90,7 +89,6 @@ def Thresholded(pixelArray, lower_threshold, upper_threshold):
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">def Thresholded(pixelArray, lower_threshold, upper_threshold):
-    # It doesn&#39;t work correctly with negative values, so something isn&#39;t correct
     maximum_value = np.amax(pixelArray)
     minimum_value = np.amin(pixelArray)
     upper_value = minimum_value + (upper_threshold / 100) * (maximum_value - minimum_value)
@@ -114,7 +112,7 @@ def Thresholded(pixelArray, lower_threshold, upper_threshold):
 </summary>
 <pre><code class="python">def main(weasel):
     list_of_images = weasel.images()    # get the list of images checked by the user
-    if len(list_of_images) == 0: return   # if the user cancels then exit
+    if len(list_of_images) == 0: return   # if no images are selected, then exit
     
     cancel = 0
     while cancel == 0:
