--- a/CoreModules/DICOMFolder.html
+++ b/CoreModules/DICOMFolder.html
@@ -38,7 +38,8 @@ folder.read_dataframe()
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">&#34;&#34;&#34; Class for reading and summarizing contents of a DICOM folder.
+<pre><code class="python">&#34;&#34;&#34;
+Class for reading and summarizing contents of a DICOM folder.
 
 The DICOMfolder reads a folder containing DICOM files,
 summarizes the content as a pandas DataFrame, and exports as csv.
