--- a/CoreModules/StyleSheet.html
+++ b/CoreModules/StyleSheet.html
@@ -38,6 +38,8 @@ The CSS commands are applied to each PyQt widget.
 &#34;&#34;&#34;
 
 WEASEL_GREY = &#34;&#34;&#34;
+                QMdiSubWindow:resize{cursor: n-resize;}
+
                 QPushButton {
                              background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
                                       stop: 0 #CCCCBB, stop: 1 #FFFFFF);
