--- a/Displays/ImageViewers/ImageViewer.html
+++ b/Displays/ImageViewers/ImageViewer.html
@@ -147,10 +147,12 @@ class ImageViewer(QMdiSubWindow):
                 self.isSeries = True
                 self.isImage = False
 
+            self.SubWindowOptions( QMdiSubWindow.RubberBandResize | QMdiSubWindow.RubberBandMove)
             self.setWindowFlags(Qt.CustomizeWindowHint | 
                                           Qt.WindowCloseButtonHint | 
                                           Qt.WindowMinimizeButtonHint |
                                           Qt.WindowMaximizeButtonHint)
+
         
             height, width = self.weasel.getMDIAreaDimensions()
             #self.subWindowWidth = width
@@ -1286,10 +1288,12 @@ vertical layout created in the function setUpMainLayout.</p></div>
                 self.isSeries = True
                 self.isImage = False
 
+            self.SubWindowOptions( QMdiSubWindow.RubberBandResize | QMdiSubWindow.RubberBandMove)
             self.setWindowFlags(Qt.CustomizeWindowHint | 
                                           Qt.WindowCloseButtonHint | 
                                           Qt.WindowMinimizeButtonHint |
                                           Qt.WindowMaximizeButtonHint)
+
         
             height, width = self.weasel.getMDIAreaDimensions()
             #self.subWindowWidth = width
