--- a/CoreModules/MenuBuilder.html
+++ b/CoreModules/MenuBuilder.html
@@ -23,8 +23,7 @@
 </header>
 <section id="section-intro">
 <p>Class for building the menus in the menu bar of Weasel.</p>
-<p>MenuBuilder generates the menus defined either in an XML file or
-a Python script.</p>
+<p>MenuBuilder generates the menus defined either in an XML file or a Python script.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
@@ -32,8 +31,7 @@ a Python script.</p>
 <pre><code class="python">&#34;&#34;&#34;
 Class for building the menus in the menu bar of Weasel.
 
-MenuBuilder generates the menus defined either in an XML file or
-a Python script.
+MenuBuilder generates the menus defined either in an XML file or a Python script.
 &#34;&#34;&#34;
 import CoreModules.XMLMenuBuilder as xmlMenuBuilder
 
@@ -48,7 +46,11 @@ logger = logging.getLogger(__name__)
 
 
 class MenuBuilder():
+    &#34;&#34;&#34;
+    This class creates the top-level menus and submenus in the Weasel GUI, depending if the file menu is a Python or XML file.
 
+    If the menu file is Python, then the SubMenuBuilder is used to build the menus. If the menu file is XML, then the module `XMLMenuBuilder.py` is used to build the menu in the Weasel GUI.
+    &#34;&#34;&#34;
     def __init__(self, weasel):
 
         self.weasel = weasel
@@ -61,6 +63,7 @@ class MenuBuilder():
             menuConfigFile = self.weasel.objConfigXMLReader.getMenuConfigFile()
             if menuConfigFile:
                 #a menu config file has been defined
+                # If it&#39;s a Python menu
                 if isPythonFile(menuConfigFile):
                     moduleFileName = [pythonFilePath 
                                         for pythonFilePath in self.listPythonFiles 
@@ -71,6 +74,7 @@ class MenuBuilder():
                     objFunction = getattr(module, &#34;main&#34;)
                     #execute python functions to build the menus and menu items
                     objFunction(self.weasel)
+                # If it&#39;s an XML menu
                 elif isXMLFile(menuConfigFile):
                     xmlMenuBuilder.setupMenus(self.weasel, menuConfigFile)
                     xmlMenuBuilder.buildContextMenu(self.weasel, menuConfigFile)
@@ -83,7 +87,7 @@ class MenuBuilder():
 
 
 class SubMenuBuilder:
-    &#34;&#34;&#34;This class allows menus to be built using its member functions&#34;&#34;&#34;
+    &#34;&#34;&#34;This class allows menus to be built in Weasel GUI based on Python menu files.&#34;&#34;&#34;
 
     def __init__(self, weasel, topMenuName): 
         try:
@@ -260,13 +264,18 @@ def isXMLFile(fileName):
 <span>(</span><span>weasel)</span>
 </code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>This class creates the top-level menus and submenus in the Weasel GUI, depending if the file menu is a Python or XML file.</p>
+<p>If the menu file is Python, then the SubMenuBuilder is used to build the menus. If the menu file is XML, then the module <code>XMLMenuBuilder.py</code> is used to build the menu in the Weasel GUI.</p></div>
 <details class="source">
 <summary>
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">class MenuBuilder():
+    &#34;&#34;&#34;
+    This class creates the top-level menus and submenus in the Weasel GUI, depending if the file menu is a Python or XML file.
 
+    If the menu file is Python, then the SubMenuBuilder is used to build the menus. If the menu file is XML, then the module `XMLMenuBuilder.py` is used to build the menu in the Weasel GUI.
+    &#34;&#34;&#34;
     def __init__(self, weasel):
 
         self.weasel = weasel
@@ -279,6 +288,7 @@ def isXMLFile(fileName):
             menuConfigFile = self.weasel.objConfigXMLReader.getMenuConfigFile()
             if menuConfigFile:
                 #a menu config file has been defined
+                # If it&#39;s a Python menu
                 if isPythonFile(menuConfigFile):
                     moduleFileName = [pythonFilePath 
                                         for pythonFilePath in self.listPythonFiles 
@@ -289,6 +299,7 @@ def isXMLFile(fileName):
                     objFunction = getattr(module, &#34;main&#34;)
                     #execute python functions to build the menus and menu items
                     objFunction(self.weasel)
+                # If it&#39;s an XML menu
                 elif isXMLFile(menuConfigFile):
                     xmlMenuBuilder.setupMenus(self.weasel, menuConfigFile)
                     xmlMenuBuilder.buildContextMenu(self.weasel, menuConfigFile)
@@ -315,6 +326,7 @@ def isXMLFile(fileName):
         menuConfigFile = self.weasel.objConfigXMLReader.getMenuConfigFile()
         if menuConfigFile:
             #a menu config file has been defined
+            # If it&#39;s a Python menu
             if isPythonFile(menuConfigFile):
                 moduleFileName = [pythonFilePath 
                                     for pythonFilePath in self.listPythonFiles 
@@ -325,6 +337,7 @@ def isXMLFile(fileName):
                 objFunction = getattr(module, &#34;main&#34;)
                 #execute python functions to build the menus and menu items
                 objFunction(self.weasel)
+            # If it&#39;s an XML menu
             elif isXMLFile(menuConfigFile):
                 xmlMenuBuilder.setupMenus(self.weasel, menuConfigFile)
                 xmlMenuBuilder.buildContextMenu(self.weasel, menuConfigFile)
@@ -353,13 +366,13 @@ def isXMLFile(fileName):
 <span>(</span><span>weasel, topMenuName)</span>
 </code></dt>
 <dd>
-<div class="desc"><p>This class allows menus to be built using its member functions</p></div>
+<div class="desc"><p>This class allows menus to be built in Weasel GUI based on Python menu files.</p></div>
 <details class="source">
 <summary>
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">class SubMenuBuilder:
-    &#34;&#34;&#34;This class allows menus to be built using its member functions&#34;&#34;&#34;
+    &#34;&#34;&#34;This class allows menus to be built in Weasel GUI based on Python menu files.&#34;&#34;&#34;
 
     def __init__(self, weasel, topMenuName): 
         try:
