--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@ This reference manual describes in detail the modules that compose Weasel plus t
 </dd>
 <dt><code class="name"><a title="Weasel.CoreModules" href="CoreModules/index.html">Weasel.CoreModules</a></code></dt>
 <dd>
-<div class="desc"><p>These modules are an important part of the Weasel infrastructure. Users are
-recommended not to amend these modules.</p></div>
+<div class="desc"><p>This is a collection of essential python modules to start Weasel GUI …</p></div>
 </dd>
 <dt><code class="name"><a title="Weasel.DICOM" href="DICOM/index.html">Weasel.DICOM</a></code></dt>
 <dd>
