--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <section id="section-intro">
 <p>Weasel is a Python environment for developing and deploying quantitative medical imaging applications.</p>
 <p>It aims to simplify the process of testing prototype image processing pipelines on clinical data, by avoiding the need for dedicated graphical interface development and removing the overhead involved in interfacing with DICOM databases. This will speed up the translation of new methods into early stage clinical studies, bringing forward the point where prototypes can be stress-tested under real world conditions.</p>
+<p>This will speed up the translation of new methods into early stage clinical studies, bringing forward the point where prototypes can be stress-tested under real world conditions.</p>
 <p>This reference manual describes in detail the modules that compose Weasel plus the classes and functions that can be used to develop new image processing pipelines.</p>
 <details class="source">
 <summary>
@@ -33,6 +34,8 @@
 Weasel is a Python environment for developing and deploying quantitative medical imaging applications.
 
 It aims to simplify the process of testing prototype image processing pipelines on clinical data, by avoiding the need for dedicated graphical interface development and removing the overhead involved in interfacing with DICOM databases. This will speed up the translation of new methods into early stage clinical studies, bringing forward the point where prototypes can be stress-tested under real world conditions.
+
+This will speed up the translation of new methods into early stage clinical studies, bringing forward the point where prototypes can be stress-tested under real world conditions.
 
 This reference manual describes in detail the modules that compose Weasel plus the classes and functions that can be used to develop new image processing pipelines.
 &#34;&#34;&#34;</code></pre>
