--- a/Displays/index.html
+++ b/Displays/index.html
@@ -53,7 +53,7 @@
 <dl>
 <dt><code class="name"><a title="Weasel.Displays.GraphPlotter" href="GraphPlotter.html">Weasel.Displays.GraphPlotter</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>Class used to plot an x,y line graph</p></div>
 </dd>
 <dt><code class="name"><a title="Weasel.Displays.ImageViewers" href="ImageViewers/index.html">Weasel.Displays.ImageViewers</a></code></dt>
 <dd>
@@ -63,7 +63,7 @@ and with the …</p></div>
 </dd>
 <dt><code class="name"><a title="Weasel.Displays.MeanROITimeCurveViewer" href="MeanROITimeCurveViewer.html">Weasel.Displays.MeanROITimeCurveViewer</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>Class GraphPlotter applied to plotting an MR signal/time curve</p></div>
 </dd>
 <dt><code class="name"><a title="Weasel.Displays.Messaging" href="Messaging.html">Weasel.Displays.Messaging</a></code></dt>
 <dd>
@@ -75,7 +75,7 @@ and with the …</p></div>
 </dd>
 <dt><code class="name"><a title="Weasel.Displays.ViewMetaData" href="ViewMetaData.html">Weasel.Displays.ViewMetaData</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>Creates a subwindow that displays a DICOM image's metadata.</p></div>
 </dd>
 </dl>
 </section>
