--- a/Displays/index.html
+++ b/Displays/index.html
@@ -67,7 +67,8 @@ and with the …</p></div>
 </dd>
 <dt><code class="name"><a title="Weasel.Displays.Messaging" href="Messaging.html">Weasel.Displays.Messaging</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>Classes that provide pop-up windows that display messages
+and progress bars to the user.</p></div>
 </dd>
 <dt><code class="name"><a title="Weasel.Displays.UserInput" href="UserInput.html">Weasel.Displays.UserInput</a></code></dt>
 <dd>
