--- a/Displays/index.html
+++ b/Displays/index.html
@@ -72,7 +72,8 @@ and progress bars to the user.</p></div>
 </dd>
 <dt><code class="name"><a title="Weasel.Displays.UserInput" href="UserInput.html">Weasel.Displays.UserInput</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>Class to create a pop-up input dialog that
+allows the user to input one or more data items.</p></div>
 </dd>
 <dt><code class="name"><a title="Weasel.Displays.ViewMetaData" href="ViewMetaData.html">Weasel.Displays.ViewMetaData</a></code></dt>
 <dd>
