--- a/Displays/ImageViewers/index.html
+++ b/Displays/ImageViewers/index.html
@@ -62,7 +62,8 @@ of the subwindows used to display DICOM images …</p></div>
 </dd>
 <dt><code class="name"><a title="Weasel.Displays.ImageViewers.DataStructures" href="DataStructures/index.html">Weasel.Displays.ImageViewers.DataStructures</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>Classes for the storage of data to support the user's navigation of images
+in a DICOM series.</p></div>
 </dd>
 <dt><code class="name"><a title="Weasel.Displays.ImageViewers.ImageViewer" href="ImageViewer.html">Weasel.Displays.ImageViewers.ImageViewer</a></code></dt>
 <dd>
