--- a/Displays/ImageViewers/DataStructures/index.html
+++ b/Displays/ImageViewers/DataStructures/index.html
@@ -40,7 +40,9 @@ in a DICOM series.
 <dl>
 <dt><code class="name"><a title="Weasel.Displays.ImageViewers.DataStructures.UserImageColourSelection" href="UserImageColourSelection.html">Weasel.Displays.ImageViewers.DataStructures.UserImageColourSelection</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>This class module provides the class variables and functions needed
+to store and retrieve the data associated with changing the colour table,
+…</p></div>
 </dd>
 </dl>
 </section>
