--- a/Displays/ImageViewers/ComponentsUI/FreeHandROI/index.html
+++ b/Displays/ImageViewers/ComponentsUI/FreeHandROI/index.html
@@ -96,7 +96,8 @@ the above icons.
 </dd>
 <dt><code class="name"><a title="Weasel.Displays.ImageViewers.ComponentsUI.FreeHandROI.HelperFunctions" href="HelperFunctions.html">Weasel.Displays.ImageViewers.ComponentsUI.FreeHandROI.HelperFunctions</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>A library of helper functions used by the class GraphicsItem to render
+a pixel array in a PyQt5 QGraphicsObject widget.</p></div>
 </dd>
 <dt><code class="name"><a title="Weasel.Displays.ImageViewers.ComponentsUI.FreeHandROI.ROI_Storage" href="ROI_Storage.html">Weasel.Displays.ImageViewers.ComponentsUI.FreeHandROI.ROI_Storage</a></code></dt>
 <dd>
