--- a/Displays/ImageViewers/ComponentsUI/FreeHandROI/ROI_Storage.html
+++ b/Displays/ImageViewers/ComponentsUI/FreeHandROI/ROI_Storage.html
@@ -77,7 +77,8 @@ class ROIs():
 
 
     def __repr__(self):
-       return &#39;{}&#39;.format(
+        &#34;&#34;&#34;Represents this class&#39;s objects as a string&#34;&#34;&#34;
+        return &#39;{}&#39;.format(
            self.__class__.__name__)
    
 
@@ -370,7 +371,8 @@ object hosting the ROIs object</p></div>
 
 
     def __repr__(self):
-       return &#39;{}&#39;.format(
+        &#34;&#34;&#34;Represents this class&#39;s objects as a string&#34;&#34;&#34;
+        return &#39;{}&#39;.format(
            self.__class__.__name__)
    
 
