--- a/Displays/ImageViewers/ComponentsUI/FreeHandROI/index.html
+++ b/Displays/ImageViewers/ComponentsUI/FreeHandROI/index.html
@@ -92,7 +92,9 @@ the above icons.
 </dd>
 <dt><code class="name"><a title="Weasel.Displays.ImageViewers.ComponentsUI.FreeHandROI.GraphicsView" href="GraphicsView.html">Weasel.Displays.ImageViewers.ComponentsUI.FreeHandROI.GraphicsView</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>The GraphicsView class
+is derived from the PyQt QGraphicsView class
+and it visualizes the contents of a QGraphicsScene in a scrollable viewport …</p></div>
 </dd>
 <dt><code class="name"><a title="Weasel.Displays.ImageViewers.ComponentsUI.FreeHandROI.HelperFunctions" href="HelperFunctions.html">Weasel.Displays.ImageViewers.ComponentsUI.FreeHandROI.HelperFunctions</a></code></dt>
 <dd>
