--- a/Displays/ImageViewers/ComponentsUI/FreeHandROI/index.html
+++ b/Displays/ImageViewers/ComponentsUI/FreeHandROI/index.html
@@ -88,7 +88,8 @@ the above icons.
 <dl>
 <dt><code class="name"><a title="Weasel.Displays.ImageViewers.ComponentsUI.FreeHandROI.GraphicsItem" href="GraphicsItem.html">Weasel.Displays.ImageViewers.ComponentsUI.FreeHandROI.GraphicsItem</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>This class allows a DICOM image in the form of a pixel array to be displayed
+on a GraphicsScene object …</p></div>
 </dd>
 <dt><code class="name"><a title="Weasel.Displays.ImageViewers.ComponentsUI.FreeHandROI.GraphicsView" href="GraphicsView.html">Weasel.Displays.ImageViewers.ComponentsUI.FreeHandROI.GraphicsView</a></code></dt>
 <dd>
