--- a/Displays/ImageViewers/ComponentsUI/FreeHandROI/GraphicsItem.html
+++ b/Displays/ImageViewers/ComponentsUI/FreeHandROI/GraphicsItem.html
@@ -521,6 +521,7 @@ class GraphicsItem(QGraphicsObject):
         and removes them from the RIO; i.e., in the mask it sets the
         corresponding pixel(s) to False.
         &#34;&#34;&#34;
+        #Make sure we are erasing the RIO on the latest version of the mask
         self.mask = self.linkToGraphicsView.dictROIs.getUpdatedMask()
         if self.mask is not None:
             if self.linkToGraphicsView.pixelSquareSize == 1:
@@ -1241,6 +1242,7 @@ class GraphicsItem(QGraphicsObject):
         and removes them from the RIO; i.e., in the mask it sets the
         corresponding pixel(s) to False.
         &#34;&#34;&#34;
+        #Make sure we are erasing the RIO on the latest version of the mask
         self.mask = self.linkToGraphicsView.dictROIs.getUpdatedMask()
         if self.mask is not None:
             if self.linkToGraphicsView.pixelSquareSize == 1:
@@ -1775,6 +1777,7 @@ corresponding pixel(s) to False.</p></div>
     and removes them from the RIO; i.e., in the mask it sets the
     corresponding pixel(s) to False.
     &#34;&#34;&#34;
+    #Make sure we are erasing the RIO on the latest version of the mask
     self.mask = self.linkToGraphicsView.dictROIs.getUpdatedMask()
     if self.mask is not None:
         if self.linkToGraphicsView.pixelSquareSize == 1:
