--- a/Displays/ImageViewers/ComponentsUI/FreeHandROI/index.html
+++ b/Displays/ImageViewers/ComponentsUI/FreeHandROI/index.html
@@ -104,9 +104,7 @@ a pixel array in a PyQt5 QGraphicsObject widget.</p></div>
 </dd>
 <dt><code class="name"><a title="Weasel.Displays.ImageViewers.ComponentsUI.FreeHandROI.ROI_Storage" href="ROI_Storage.html">Weasel.Displays.ImageViewers.ComponentsUI.FreeHandROI.ROI_Storage</a></code></dt>
 <dd>
-<div class="desc"><p>This class provides a data structure and associated input and
-output functions for the storage of the ROI's drawn/painted
-on a DICOM image.</p></div>
+<div class="desc"></div>
 </dd>
 <dt><code class="name"><a title="Weasel.Displays.ImageViewers.ComponentsUI.FreeHandROI.Resources" href="Resources.html">Weasel.Displays.ImageViewers.ComponentsUI.FreeHandROI.Resources</a></code></dt>
 <dd>
