--- a/Displays/ImageViewers/ComponentsUI/index.html
+++ b/Displays/ImageViewers/ComponentsUI/index.html
@@ -64,8 +64,7 @@ paint a ROI …</p></div>
 </dd>
 <dt><code class="name"><a title="Weasel.Displays.ImageViewers.ComponentsUI.ImageLevelsSpinBoxes" href="ImageLevelsSpinBoxes.html">Weasel.Displays.ImageViewers.ComponentsUI.ImageLevelsSpinBoxes</a></code></dt>
 <dd>
-<div class="desc"><p>This class creates a composite widget for the display and adjustment of
-image intensity and contrast.</p></div>
+<div class="desc"></div>
 </dd>
 <dt><code class="name"><a title="Weasel.Displays.ImageViewers.ComponentsUI.ImageSliders" href="ImageSliders.html">Weasel.Displays.ImageViewers.ComponentsUI.ImageSliders</a></code></dt>
 <dd>
